# library-management-system

./: .gitignore  README.md  api_client.py  api_server.py  build.bat  main.py  pyproject.toml  requirements.txt
client/: admin.py  book_management.py  borrow_return.py  client.py  user_management.py
database/: books.txt  borrows.txt  users.txt
helpers/: __init__.py  paths.py  read_db.py  write_db.py
server/: api.py  api_admin.py  api_book_management.py  api_borrow_return.py  api_user_management.py  app.py
