[project]
name = "Library Management System"
version = "0.1.0"
description = "An API service to demonstrate Library Management System API capabilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
