[project]
name = "library-management-system"
version = "2.5.0"
description = "A comprehensive API service for Library Management System with Book Management, User Management, Borrow & Return System and Reports features"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
